[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bwclient"
version = "0.0.1"
authors = [
  { name="Sergio Branco", email="asergio.branco@gmail.com" },
]
description = "Blackwing is a decentralized network package, to build strong, powerfull and secure applications."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
   "Development Status :: 4 - Beta",
        "Environment :: Console",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
        "Programming Language :: Python :: 3",
        "Operating System :: OS Independent",
        "Topic :: Network"
]

[project.urls]
Homepage = "https://blaclwing.readthedocs.io"